# Jalali-Datepicker-Frappe

./: .eslintrc  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
islamic_calendar/: hooks.py  modules.txt
islamic_calendar/islamic_calendar/: islamic_configure.py
islamic_calendar/islamic_calendar/doctype/islamic_date_setting/: islamic_date_setting.js  islamic_date_setting.json  islamic_date_setting.py  test_islamic_date_setting.py
islamic_calendar/public/css/: islamic_calendar.css  jalali_calendar_override.css
islamic_calendar/public/islamic_lib/: jquery.calendars.iranian.js  jquery.calendars.picker.js
islamic_calendar/public/js/: custom_control_date.js  islamic_assets.bundle.js
jalali_datepicker_frappe/: boot.py  build.json  hooks.py  install.py  modules.txt  patches.txt
jalali_datepicker_frappe/jalali_datepicker_frappe/doctype/shamsi_calendar_settings/: shamsi_calendar_settings.json  shamsi_calendar_settings.py
jalali_datepicker_frappe/public/css/: jalali_toggle.css
jalali_datepicker_frappe/public/js/: jalali_toggle.js
